--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "description": "Create a weapp project with typescript ",
   "main": "bin/index.js",
+  "bin": {
+    "cli-demo": "./bin/index.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "flink": "npm unlink && npm link"
   },
   "repository": {
     "type": "git",
@@ -23,5 +26,11 @@
   "bugs": {
     "url": "https://github.com/yuuFen/weapp-ts-cli/issues"
   },
-  "homepage": "https://github.com/yuuFen/weapp-ts-cli"
+  "homepage": "https://github.com/yuuFen/weapp-ts-cli",
+  "dependencies": {
+    "chalk": "^4.1.0",
+    "commander": "^6.0.0",
+    "download-git-repo": "^3.0.2",
+    "json-format": "^1.0.1"
+  }
 }
