--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "weapp-ts-cli",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "Create a weapp project with typescript ",
   "main": "bin/index.js",
   "bin": {
-    "cli-demo": "./bin/index.js"
-  },
-  "scripts": {
-    "flink": "npm unlink && npm link"
+    "wets": "./bin/index.js",
+    "weapp-ts-cli": "./bin/index.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +29,8 @@
     "chalk": "^4.1.0",
     "commander": "^6.0.0",
     "download-git-repo": "^3.0.2",
-    "json-format": "^1.0.1"
+    "inquirer": "^7.3.3",
+    "json-format": "^1.0.1",
+    "shelljs": "^0.8.4"
   }
 }
